[project]
name = "vllm-mlx-tui"
version = "0.1.0"
description = "Textual harness for vLLM-MLX: pick cached models, start server, chat"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.47.0",
  "httpx>=0.27.0",
  "huggingface_hub>=0.20.0",
]

[project.scripts]
vllm-mlx-tui = "vllm_mlx_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vllm_mlx_tui"]
