[project]
name = "vllm-wave"
version = "0.1.0"
description = "vLLM-wave: Textual launcher and chat UX for local vLLM serving"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.47.0",
  "httpx>=0.27.0",
  "huggingface_hub>=0.20.0",
]

[project.scripts]
vllm-wave = "vllm_wave.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vllm_wave"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
